--- a/assets/css/layouts/_headers.scss
+++ b/assets/css/layouts/_headers.scss
@@ -9,13 +9,22 @@
     margin-inline-end: auto;
     width: fit-content;
     height: 100%;
-    // background-color: rgb(0 0 0 / .2);
-    // backdrop-filter: blur(.4rem);
+    transition: .5s;
     z-index: 50000;
+
+    &:has(:hover) {
+        background-image: radial-gradient(circle at top left, rgb(var(--clr-tint-100) / .25), rgb(var(--clr-max) / .1), rgb(var(--clr-theme) / .1));
+        background-color: rgb(0 0 0 / .2);
+        backdrop-filter: blur(.4rem);
+        box-shadow: 0 0 1rem rgb(var(--clr-min) / .2);
+    }
 }
 
 #logoPrimary { // 메인 로고
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
 }
 
 #navPrimary { // 메인 네비게이션
@@ -38,6 +47,7 @@
         width: 12rem;
         font-size: var(--fnt-xl);
         text-align: end;
+        text-shadow: .1rem .1rem rgb(var(--clr-min) / .2);
     }
 
     &:hover {
