--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,6 +744,23 @@ a:hover, a:focus, a:active {
   background-color: rgb(var(--clr-min)/0.75);
 }
 
+#modalHeader {
+  font-family: var(--ff-gothic-en);
+}
+
+#frmAsk {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 0.5rem;
+  margin-block-start: 1rem;
+}
+
+#modalFooter {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.25rem;
+}
+
 /* _mainPage.scss */
 /* _subPages.scss */
 /* _subPages.scss */
